[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "google-api-python-client>=2.188.0",
    "google-auth>=2.47.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "numpy>=2.4.1",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "requests>=2.32.5",
    "streamlit>=1.53.0",
    "yt-dlp>=2025.12.8",
]
